# brief_graphana

./: .gitignore  BRIEF_CI_CD_V2.md  BRIEF_MONITORING_FINAL.md  DASHBOARD_DESIGN.md  Dockerfile  HTTP Overview-1766736358245.json  PHASE_1_COMPLETE.md  VEILLE_OBSERVABILITE.md  dashboard perso 3b-1766736343988.json  docker-compose.yml  pyproject.toml  test.db
app/: database.py  main.py
app/monitoring/: __init__.py  metrics.py
app/routes/: items.py
prometheus/: prometheus.yml
